k8s/gatekeeper-constraints/disallow-pods-in-default-ns.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowDefaultNamespace
metadata:
  name: disallow-pods-in-default-namespace
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
