k8s/gatekeeper-constraints/require-nodeselector-for-pods.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind:  K8sRequireNodeSelector
metadata:
  name: require-node-selector-for-pods
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
